--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,182 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.allBodies {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+/* Tailwind Styles */
+
+.app {
+  @apply relative flex flex-col mx-auto;
+}
+
+.hoverLinks {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  margin: 10px;
+}
+
+.hoverLinks:before {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background: #f0f0f0;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none;
+}
+
+.hoverLinks:hover:before {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+}
+
+.nav {
+  @apply fixed left-0 flex w-full backdrop-blur-2xl flex-col
+}
+
+.custom-class-1 {
+  color: red;
+}
+
+.custom-class-2 {
+  color: blue;
+}
+
+.ads {
+  @apply fixed left-0 flex w-full backdrop-blur-2xl flex-col
+}
+
+.navcolor {
+  background-color: #ed017f;
+}
+
+.link {
+  color: blue;
+}
+
+.link-hover {
+  color: red;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+  
+}
+
+.dropdowns {
+  display: none;
+  position: absolute;
+  top: 20px;
+}
+
+.dropdown-item {
+  list-style: none;
+  color: black;
+}
+.adsNav {
+  display: flex;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 180px;  
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  display: block;  
+}
+
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  transition: all .5s ease 0s;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content 
+{display: block;  
+}
+
+.hovered-container {
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 10px;
+  margin-left: 0;  
+}
+
+.hovered .additional-list {
+  display: block;  
+}
+
+.additional-list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 5px;
+  list-style: none;
+  margin: 0;  
+}
+
+.additional-list li {
+  padding: 5px;  
+}
+
+.hover-container:hover .additional-list {
+  display: block;  
+}
+
+/* START: Footer styles */
+.footer {
+  @apply flex flex-col text-black  mt-5 border-t border-gray-100;
+}
+
+.footer__links-container {
+  @apply flex max-md:flex-col flex-wrap justify-between gap-5 sm:px-16 px-6 py-10;
+}
+
+.footer__rights {
+  @apply flex flex-col justify-start items-start gap-6;
+}
+
+.footer__links {
+  @apply flex-1 w-full flex md:justify-end flex-wrap max-md:mt-10 gap-20;
+}
+
+.footer__link {
+  @apply flex flex-col gap-6 text-base min-w-[170px];
+}
+
+.footer__copyrights {
+  @apply flex justify-between items-center flex-wrap mt-10 border-t border-gray-100 sm:px-16 px-6 py-10;
+}
+
+.footer__copyrights-link {
+  @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
+}
