--- a/app/globals.css
+++ b/app/globals.css
@@ -128,10 +128,13 @@ body {
   
 }
 
+
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
-  display: block;  
+  display: block;
+  z-index: 1000;
+  position: relative;
 }
 
 
@@ -139,6 +142,8 @@ body {
   background-color: #ddd;
   transition: all .5s ease 0s;
   color: black;
+  position: relative;
+  z-index: 1000;
 }
 
 .dropdown:hover .dropdown-content 
@@ -149,7 +154,9 @@ body {
   position: relative;
   cursor: pointer;
   margin-bottom: 10px;
-  margin-left: 0;  
+  margin-left: 0;
+  position: relative;
+  z-index: 1000;  
 }
 
 .hovered .additional-list {
@@ -203,4 +210,27 @@ body {
 
 .footer__copyrights-link {
   @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
+}
+
+/* Swiper properties */
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
